objects/AcmIntegration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This list contains all details needed for connecting to ACM</description>
    <fields>
        <fullName>Acm_Service_Account_Password__c</fullName>
        <description>Acm service account password used for basic authentication with ACM</description>
        <inlineHelpText>set acm service account password used for basic authentication with ACM</inlineHelpText>
        <label>ACM SERVICE ACCOUNT PASSWORD</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acm_Service_Account_UserName__c</fullName>
        <description>Acm service account user name for performing basic authorization</description>
        <inlineHelpText>Provide acm service account user name for performing basic authorization</inlineHelpText>
        <label>ACM SERVICE ACCOUNT USERNAME</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GET_URL__c</fullName>
        <description>Used to set the URL to perform get request on acm resource via api manager</description>
        <inlineHelpText>set the URL to perform get request on acm resource via api manager</inlineHelpText>
        <label>MITIGANT DATA BOX GET URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IMPERSONATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Impersonate logged in user</description>
        <inlineHelpText>Impersonate logged in user</inlineHelpText>
        <label>IMPERSONATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MENTIS_URL__c</fullName>
        <description>Type the mentis url endpoint, this will be different for dev/uat/prod environment</description>
        <inlineHelpText>mentis url endpoint, this will be different for  dev/uat/prod environment</inlineHelpText>
        <label>MENTIS_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POST_URL__c</fullName>
        <description>Used to set the URL to perform post request on via api manager</description>
        <inlineHelpText>set the URL to perform post request on via api manager</inlineHelpText>
        <label>MITIGANT DATA BOX POST URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X_ACM_IMPERSONATE__c</fullName>
        <description>Field used for setting user to impersonate on ACM, If not set the service account will be used</description>
        <inlineHelpText>set field used for setting user to impersonate on ACM,  If not set the service account will be used</inlineHelpText>
        <label>X_ACM_IMPERSONATE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_IBM_Client_Id__c</fullName>
        <description>Token id used for authenticating with api manager</description>
        <inlineHelpText>set token id used for authenticating with api manager</inlineHelpText>
        <label>X IBM CLIENT ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X_IBM_Client_Secret__c</fullName>
        <description>Token field used for authenticating with api manager</description>
        <inlineHelpText>set token field used for authenticating with api manager</inlineHelpText>
        <label>X IBM CLIENT SECRET</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>admin_email__c</fullName>
        <description>Used to send information on collateral integration to salesforce</description>
        <label>ADMIN EMAIL</label>
        <type>Email</type>
    </fields>
    <label>AcmIntegration</label>
</CustomObject>